--- a/.sops.yaml
+++ b/.sops.yaml
@@ -16,3 +16,9 @@ creation_rules:
       - *user_chlorodose
       age:
       - *host_cl-server
+  - path_regex: secrets/oc-homelab/*
+    key_groups:
+    - pgp:
+      - *user_chlorodose
+      age:
+      - *host_cl-server
