move samba password to binary

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -22,3 +22,9 @@ creation_rules:
       - *user_chlorodose
       age:
       - *host_cl-server
+  - path_regex: secrets/samba/*
+    key_groups:
+    - pgp:
+      - *user_chlorodose
+      age:
+      - *host_cl-server
